Commiting changes to: 	styles - updated menu colors, fixed table max height issues. 	invoices - implemented more of the invoicing functionality. Remain to update the prices and invoice styling. 	invoiceRoutes - fixed issues with name generation. Optimized suboptimal code :D GG WP today

--- a/clients.html
+++ b/clients.html
@@ -5,8 +5,8 @@
         </button>
     </div>
     <!-- Clients Table -->
-    <table class="min-w-full divide-y divide-gray-200 mt-4 bg-slate-800 text-slate-100">
-        <thead>
+    <table class="min-w-full divide-y divide-gray-200 mt-4 bg-slate-700 text-slate-100">
+        <thead class="bg-slate-800">
             <tr>
                 <th class="hidden w-1/12">ID</th>
                 <th id="sortNameClients" class="border p-2 w-2/12">Name</th>
