--- a/invoices.html
+++ b/invoices.html
@@ -147,6 +147,37 @@
                         </tbody>
                     </table>
                 </div>
+                <!-- Discounts and Extras FIX THE DATA-->
+                <div class="flex items-center justify-center">
+                    <div x-data="{ open: false }" class="relative inline-block">
+                        <div x-show="open" @click.outside="open = false"
+                            x-transition:enter="transition ease-out duration-200"
+                            x-transition:enter-start="opacity-0"
+                            x-transition:enter-end="opacity-100"
+                            x-transition:leave="transition ease-in duration-150"
+                            x-transition:leave-start="opacity-100"
+                            x-transition:leave-end="opacity-0"
+                            class="popover-container shadow-lg">
+                            <div class="popover bg-white p-4 rounded z-20">
+                                <form action="submit">
+                                    <input type="text" placeholder="Put something1...">
+                                    <input type="text" placeholder="Put something2...">
+                                    <input type="text" placeholder="Put something3...">
+                                </form>
+                            </div>
+                            <!-- Arrow -->
+                            <div class="arrow"></div>
+                        </div>
+
+                        <button @click="open = !open" class="border rounded bg-gray-600 text-white hover:bg-gray-700 transition duration-300 font-bold px-4 mt-4">
+                            Discounts
+                        </button>
+                    </div>
+                </div>
+
+
+                
+
                 <!-- Discount and VAT Section -->
                 <div class="flex space-x-4">
                     <input x-model="discountPercent" type="number" steep="any" placeholder="Discount %" class="w-full p-2 rounded bg-slate-600 text-white">
@@ -155,9 +186,9 @@
                 <input x-model="vatPercent" type="number" step="any" placeholder="VAT %" class="w-full mt-4 p-2 rounded bg-slate-600 text-white">
                 <div class="mt-4">
                     <h3 class="text-lg font-medium text-gray-700">Subtotal: <span x-text="subtotal"></span></h3>
-                    <h3 class="text-lg font-medium text-gray-700">Discount: <span x-text="discount"></span></h3>
                     <h3 class="text-lg font-medium text-gray-700">VAT: <span x-text="vat"></span></h3>
                     <h3 class="text-xl font-bold text-gray-700">Total: <span x-text="total"></span></h3>
+                    <h3 class="text-lg font-medium text-gray-700 mt-2">Discount: <span x-text="discount"></span></h3>
                 </div>
                 <button @click="generateInvoice" class="mt-4 w-full bg-green-500 text-white text-base font-medium p-2 rounded hover:bg-green-600">Generate Invoice</button>
             </div>
