--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <script type="module" src="./app.js" defer></script>
     <script src="//unpkg.com/alpinejs" defer></script>
+    <script src="./public/componentsLibrary/vik-tooltip.js"></script>
     <style>
         [x-cloak] { display: none !important; }
     </style>
