Discount, big commit. Still have issue while adding items if there is a discount - unable to add not sure why.

--- a/clients.html
+++ b/clients.html
@@ -4,6 +4,9 @@
             Add New
         </button>
     </div>
+    <div class="m-5">
+        <button @click="callSuccessToast()" class="border bg-blue-200">Toast</button>
+    </div>
     <!-- Clients Table -->
     <table class="min-w-full divide-y divide-gray-200 mt-4 bg-slate-700 text-slate-100">
         <thead class="bg-slate-800">
